examples/pure/errors/trace.sme
proc test ()
{
    trace ("{} {}", foo);
}

network i () {
    instance _ of test ();
}
